nasty fix overflow-x hidden

--- a/public/css/front/main.css
+++ b/public/css/front/main.css
@@ -2,6 +2,7 @@ body{
 
     font-family: 'Open Sans', sans-serif !important;
     color:#000;
+    overflow-x: hidden;
 }
 a{
     text-decoration: none !important;
